<resources>
    <string name="app_name">Latihan Floating Label EditText</string>
    <string name="action_settings">Settings</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_email">Email</string>    
    <string name="hint_umur">Umur</string>
    <string name="hint_password">Password</string>
    <string name="text_daftar">DAFTAR</string>
    <string name="error_pesan_nama">Masukan Nama Lengkap</string>
    <string name="error_pesan_email">Masukan Email</string>
    <string name="error_pesan_umur">Masukan Umur</string>
    <string name="error_pesan_password">Masukan Password</string>
    <string name="pesan_sukses">Pendaftaran Berhasil</string>
</resources>
